# dot_swarm

./: .gitignore  404.html  README.md  gen_logo.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yml  swarm-drift-check.yml
.swarm/: BOOTSTRAP.md  context.md  memory.md  queue.md  state.md
ARCHITECTURE/: index.html
CLI_REFERENCE/: index.html
CREDITS/: index.html
DRIFT_CHECK_SETUP/: index.html
INTEGRATION_PLAN/: index.html
PLATFORM_SETUP/: index.html
SWARMS_AI_PR_GUIDE/: index.html
cli/: pyproject.toml
cli/src/swarm_city/: __init__.py  bedrock.py  cli.py  models.py  operations.py
docs/: ARCHITECTURE.md  CLI_REFERENCE.md  CREDITS.md  PLATFORM_SETUP.md
mcp/: pyproject.toml
mcp/src/swarm_city_mcp/: server.py
search/: search_index.json
src/swarm_city/: __init__.py  ai_ops.py  bedrock.py  cli.py  models.py  operations.py
src/swarm_city_mcp/: __init__.py  server.py
tests/: test_cli.py  test_operations.py
