[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swarm-city"
version = "0.2.0"
description = "SwarmCity — markdown-native agent orchestration for multi-repo organizations"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Michaellee" }
]
dependencies = [
    "click>=8.1",
    "mcp>=1.0",
]

[project.optional-dependencies]
ai = [
    "boto3>=1.34",
]

[project.scripts]
swarm = "swarm_city.cli:cli"
swarm-city-mcp = "swarm_city_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
