[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swarm-city"
version = "0.3.0"
description = "SwarmCity — markdown-native agent orchestration for multi-repo organizations"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["swarm", "agent", "orchestration", "mcp", "git", "markdown", "coordination"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
authors = [
    { name = "Michaellee" }
]
dependencies = [
    "click>=8.1",
    "mcp>=1.0",
]

[project.urls]
Homepage = "https://github.com/MikeHLee/SwarmCity"
Documentation = "https://mikehlee.github.io/SwarmCity/"
Repository = "https://github.com/MikeHLee/SwarmCity.git"
Issues = "https://github.com/MikeHLee/SwarmCity/issues"

[project.optional-dependencies]
ai = [
    "boto3>=1.34",
]

[project.scripts]
swarm = "swarm_city.cli:cli"
swarm-city-mcp = "swarm_city_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
