[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swarm-city-mcp"
version = "0.1.0"
description = "SwarmCity MCP server — exposes .swarm/ operations as MCP tools"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "swarm-city>=0.1.0",
]

[project.scripts]
swarm-city-mcp = "swarm_city_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
